# DL_CPP

basic_nn/: CMakeLists.txt  build.sh  minst_fc.cpp
data_preprocessing/: pca.cpp
hello_world/: CMakeLists.txt  build.sh  example.cpp
learn_cuda/: hello_world.cu  hello_world_cu  report1.nsys-rep  run_cu.sh
